--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <title>Mélyssa COSSOU | Vidéaste & Créatrice de contenu</title>
 
     <!-- Canonical -->
-    <link rel="canonical" href="https://www.ton-domaine.com/" />
+    <link rel="canonical" href="https://lyssama.netlify.app/" />
 
     <!-- Primary Meta -->
     <meta name="description" content="Mélyssa COSSOU — vidéaste & créatrice de contenu. Vidéo, photo, storytelling & social content pour marques et artistes. Basée au Bénin, disponible à l’international." />
@@ -22,16 +22,16 @@
     <meta property="og:type" content="website" />
     <meta property="og:title" content="Mélyssa COSSOU | Vidéaste & Créatrice de contenu" />
     <meta property="og:description" content="Transformez vos idées en histoires visuelles qui marquent et inspirent votre audience." />
-    <meta property="og:url" content="https://www.ton-domaine.com/" />
+    <meta property="og:url" content="https://lyssama.netlify.app/" />
     <meta property="og:site_name" content="Mélyssa COSSOU — Portfolio" />
-    <meta property="og:image" content="https://www.ton-domaine.com/SamaCover.jpg" />
+    <meta property="og:image" content="https://lyssama.netlify.app/Sama.jpg" />
     <meta property="og:image:alt" content="Portrait de Mélyssa COSSOU — vidéaste & créatrice de contenu" />
 
     <!-- Twitter Card -->
     <meta name="twitter:card" content="summary_large_image" />
     <meta name="twitter:title" content="Mélyssa COSSOU | Vidéaste & Créatrice de contenu" />
     <meta name="twitter:description" content="Vidéo, photo & contenu social captivant pour votre marque." />
-    <meta name="twitter:image" content="https://www.ton-domaine.com/SamaCover.jpg" />
+    <meta name="twitter:image" content="https://lyssama.netlify.app/Sama.jpg" />
 
     <!-- Favicon & Manifest -->
     <link rel="icon" type="image/png" sizes="32x32" href="/icons/favicon-32.png" />
@@ -45,7 +45,7 @@
     <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;500;600;700&display=swap" rel="stylesheet" />
 
     <!-- Preload Hero Image -->
-    <link rel="preload" as="image" href="/SamaCover.jpg" imagesrcset="/SamaCover.jpg 1920w" imagesizes="100vw" />
+    <link rel="preload" as="image" href="/Sama.jpg" imagesrcset="/SamaCover.jpg 1920w" imagesizes="100vw" />
 
     <!-- JSON-LD Person -->
     <script type="application/ld+json">
@@ -54,12 +54,13 @@
       "@type": "Person",
       "name": "Mélyssa COSSOU",
       "jobTitle": "Vidéaste & Créatrice de contenu",
-      "url": "https://www.ton-domaine.com/",
-      "image": "https://www.ton-domaine.com/SamaCover.jpg",
+      "url": "https://lyssama.netlify.app/",
+      "image": "https://lyssama.netlify.app/Sama.jpg",
       "sameAs": [
-        "https://www.instagram.com/tonprofil",
-        "https://www.linkedin.com/in/tonprofil",
-        "https://www.facebook.com/tonprofil"
+        "https://www.instagram.com/lys__sama",
+        "https://www.linkedin.com/in/melyssacossou",
+        "https://www.tiktok.com/@lys.sama"
+        "https://x.com/ErmitePasNette"
       ],
       "address": {
         "@type": "PostalAddress",
@@ -73,11 +74,11 @@
     {
       "@context": "https://schema.org",
       "@type": "WebSite",
-      "url": "https://www.ton-domaine.com/",
+      "url": "https://lyssama.netlify.app/",
       "name": "Mélyssa COSSOU — Portfolio",
       "potentialAction": {
         "@type": "SearchAction",
-        "target": "https://www.ton-domaine.com/search?q={query}",
+        "target": "https://lyssama.netlify.app/search?q={query}",
         "query-input": "required name=query"
       }
     }
