--- a/index.html
+++ b/index.html
@@ -4,33 +4,43 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
 
-    <!-- Title -->
-    <title>Mélyssa COSSOU | Vidéaste & Créatrice de contenu</title>
+    <!-- Title OPTIMISÉ (inclut localisation + USP) -->
+    <title>Mélyssa COSSOU | Vidéaste Professionnelle Bénin | Créatrice de Contenu Cotonou</title>
 
     <!-- Canonical -->
     <link rel="canonical" href="https://lyssama.netlify.app/" />
 
-    <!-- Primary Meta -->
-    <meta name="description" content="Mélyssa COSSOU — vidéaste & créatrice de contenu. Vidéo, photo, storytelling & social content pour marques et artistes. Basée au Bénin, disponible à l’international." />
-    <meta name="keywords" content="Mélyssa COSSOU, vidéaste, créatrice de contenu, content creator, photographe, portfolio, Bénin, Afrique, vidéo, shooting, storytelling, montage" />
+    <!-- Primary Meta OPTIMISÉ (plus de détails, mots-clés locaux) -->
+    <meta name="description" content="Vidéaste & créatrice de contenu professionnelle basée à Cotonou, Bénin. Production vidéo, photographie, storytelling visuel et contenu social média pour marques, artistes et événements. Portfolio + de 50 projets réalisés en Afrique de l'Ouest." />
+    <meta name="keywords" content="vidéaste Bénin, vidéaste Cotonou, créatrice de contenu Bénin, photographe Cotonou, production vidéo Afrique, shooting photo Bénin, montage vidéo professionnel, content creator Afrique de l'Ouest, storytelling visuel, vidéo événementiel, Mélyssa COSSOU" />
     <meta name="author" content="Mélyssa COSSOU" />
     <meta name="robots" content="index, follow, max-snippet:-1, max-image-preview:large, max-video-preview:-1" />
     <meta name="theme-color" content="#550000" />
+    
+    <!-- Géolocalisation SEO -->
+    <meta name="geo.region" content="BJ-LI" />
+    <meta name="geo.placename" content="Cotonou" />
+    <meta name="geo.position" content="6.3703;2.3912" />
+    <meta name="ICBM" content="6.3703, 2.3912" />
 
-    <!-- Open Graph -->
+    <!-- Open Graph OPTIMISÉ -->
     <meta property="og:locale" content="fr_FR" />
     <meta property="og:type" content="website" />
-    <meta property="og:title" content="Mélyssa COSSOU | Vidéaste & Créatrice de contenu" />
-    <meta property="og:description" content="Transformez vos idées en histoires visuelles qui marquent et inspirent votre audience." />
+    <meta property="og:title" content="Mélyssa COSSOU | Vidéaste & Créatrice de Contenu au Bénin" />
+    <meta property="og:description" content="Production vidéo professionnelle, photographie créative et contenu social média captivant. + de 50 projets au Bénin et en Afrique de l'Ouest. Transformez vos idées en histoires visuelles qui marquent." />
     <meta property="og:url" content="https://lyssama.netlify.app/" />
-    <meta property="og:site_name" content="Mélyssa COSSOU — Portfolio" />
+    <meta property="og:site_name" content="Mélyssa COSSOU — Vidéaste Bénin" />
     <meta property="og:image" content="https://lyssama.netlify.app/Sama.jpg" />
-    <meta property="og:image:alt" content="Portrait de Mélyssa COSSOU — vidéaste & créatrice de contenu" />
+    <meta property="og:image:alt" content="Mélyssa COSSOU — Vidéaste professionnelle et créatrice de contenu à Cotonou, Bénin" />
+    <meta property="og:image:width" content="1200" />
+    <meta property="og:image:height" content="630" />
 
     <!-- Twitter Card -->
     <meta name="twitter:card" content="summary_large_image" />
-    <meta name="twitter:title" content="Mélyssa COSSOU | Vidéaste & Créatrice de contenu" />
-    <meta name="twitter:description" content="Vidéo, photo & contenu social captivant pour votre marque." />
+    <meta name="twitter:site" content="@ErmitePasNette" />
+    <meta name="twitter:creator" content="@ErmitePasNette" />
+    <meta name="twitter:title" content="Mélyssa COSSOU | Vidéaste Bénin | Créatrice de Contenu" />
+    <meta name="twitter:description" content="Production vidéo, photo & contenu social captivant pour votre marque au Bénin et en Afrique." />
     <meta name="twitter:image" content="https://lyssama.netlify.app/Sama.jpg" />
 
     <!-- Favicon & Manifest -->
@@ -47,35 +57,134 @@
     <!-- Preload Hero Image -->
     <link rel="preload" as="image" href="/Sama.jpg" imagesrcset="/SamaCover.jpg 1920w" imagesizes="100vw" />
 
-    <!-- JSON-LD Person -->
+    <!-- JSON-LD Person ENRICHI -->
     <script type="application/ld+json">
     {
       "@context": "https://schema.org",
       "@type": "Person",
       "name": "Mélyssa COSSOU",
-      "jobTitle": "Vidéaste & Créatrice de contenu",
+      "alternateName": "Lys Sama",
+      "jobTitle": "Vidéaste & Créatrice de contenu professionnelle",
+      "description": "Vidéaste et créatrice de contenu spécialisée en production vidéo, photographie et storytelling visuel pour marques et artistes au Bénin et en Afrique de l'Ouest.",
       "url": "https://lyssama.netlify.app/",
       "image": "https://lyssama.netlify.app/Sama.jpg",
+      "email": "contact@lyssama.com",
+      "telephone": "+229-XXXXXXXX",
       "sameAs": [
         "https://www.instagram.com/lys__sama",
         "https://www.linkedin.com/in/melyssacossou",
-        "https://www.tiktok.com/@lys.sama"
+        "https://www.tiktok.com/@lys.sama",
         "https://x.com/ErmitePasNette"
       ],
       "address": {
         "@type": "PostalAddress",
+        "addressLocality": "Cotonou",
+        "addressRegion": "Littoral",
         "addressCountry": "BJ"
+      },
+      "knowsAbout": [
+        "Production vidéo",
+        "Photographie professionnelle",
+        "Montage vidéo",
+        "Création de contenu",
+        "Storytelling visuel",
+        "Marketing de contenu"
+      ],
+      "workLocation": {
+        "@type": "Place",
+        "name": "Cotonou, Bénin"
       }
     }
     </script>
 
-    <!-- JSON-LD Website -->
+    <!-- JSON-LD LocalBusiness (NOUVEAU - très important pour SEO local) -->
+    <script type="application/ld+json">
+    {
+      "@context": "https://schema.org",
+      "@type": "ProfessionalService",
+      "name": "Mélyssa COSSOU — Production Vidéo & Contenu",
+      "image": "https://lyssama.netlify.app/Sama.jpg",
+      "@id": "https://lyssama.netlify.app",
+      "url": "https://lyssama.netlify.app/",
+      "telephone": "+229-0195115182",
+      "priceRange": "50000 XOF - 500000 XOF",
+      "address": {
+        "@type": "PostalAddress",
+        "streetAddress": "Cotonou",
+        "addressLocality": "Cotonou",
+        "addressRegion": "Littoral",
+        "postalCode": "00000",
+        "addressCountry": "BJ"
+      },
+      "geo": {
+        "@type": "GeoCoordinates",
+        "latitude": 6.3703,
+        "longitude": 2.3912
+      },
+      "openingHoursSpecification": {
+        "@type": "OpeningHoursSpecification",
+        "dayOfWeek": [
+          "Monday",
+          "Tuesday",
+          "Wednesday",
+          "Thursday",
+          "Friday"
+        ],
+        "opens": "09:00",
+        "closes": "18:00"
+      },
+      "sameAs": [
+        "https://www.instagram.com/lys__sama",
+        "https://www.linkedin.com/in/melyssacossou"
+      ],
+      "areaServed": [
+        {
+          "@type": "City",
+          "name": "Cotonou"
+        },
+        {
+          "@type": "Country",
+          "name": "Bénin"
+        },
+        {
+          "@type": "Place",
+          "name": "Afrique de l'Ouest"
+        }
+      ],
+      "serviceType": [
+        "Production vidéo",
+        "Photographie professionnelle",
+        "Création de contenu social média",
+        "Montage vidéo",
+        "Storytelling visuel"
+      ]
+    }
+    </script>
+
+    <!-- JSON-LD BreadcrumbList (pour navigation) -->
+    <script type="application/ld+json">
+    {
+      "@context": "https://schema.org",
+      "@type": "BreadcrumbList",
+      "itemListElement": [{
+        "@type": "ListItem",
+        "position": 1,
+        "name": "Accueil",
+        "item": "https://lyssama.netlify.app/"
+      }]
+    }
+    </script>
+
+    <!-- JSON-LD Website ENRICHI -->
     <script type="application/ld+json">
     {
       "@context": "https://schema.org",
       "@type": "WebSite",
       "url": "https://lyssama.netlify.app/",
-      "name": "Mélyssa COSSOU — Portfolio",
+      "name": "Mélyssa COSSOU — Portfolio Vidéaste Bénin",
+      "alternateName": "Lys Sama Portfolio",
+      "description": "Portfolio professionnel de Mélyssa COSSOU, vidéaste et créatrice de contenu au Bénin",
+      "inLanguage": "fr-FR",
       "potentialAction": {
         "@type": "SearchAction",
         "target": "https://lyssama.netlify.app/search?q={query}",
