--- a/index.html
+++ b/index.html
@@ -16,6 +16,7 @@
     <meta name="author" content="Mélyssa COSSOU" />
     <meta name="robots" content="index, follow, max-snippet:-1, max-image-preview:large, max-video-preview:-1" />
     <meta name="theme-color" content="#550000" />
+    <meta name="google-site-verification" content="iw7gVSJiHDVK-3MRYoKZV--GOWRc8wwW0MXcn9Omaxk" />
     
     <!-- Géolocalisation SEO -->
     <meta name="geo.region" content="BJ-LI" />
@@ -69,7 +70,7 @@
       "url": "https://lyssama.netlify.app/",
       "image": "https://lyssama.netlify.app/Sama.jpg",
       "email": "contact@lyssama.com",
-      "telephone": "+229-XXXXXXXX",
+      "telephone": "+2290151864239",
       "sameAs": [
         "https://www.instagram.com/lys__sama",
         "https://www.linkedin.com/in/melyssacossou",
@@ -106,7 +107,7 @@
       "image": "https://lyssama.netlify.app/Sama.jpg",
       "@id": "https://lyssama.netlify.app",
       "url": "https://lyssama.netlify.app/",
-      "telephone": "+229-0195115182",
+      "telephone": "+2290151864239",
       "priceRange": "50000 XOF - 500000 XOF",
       "address": {
         "@type": "PostalAddress",
